Change order and text

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -41,35 +41,25 @@
 
   <div>
     <p class="member-content">
-      Welcome to our open studio! We hope you enjoy the ride. For a step-by-step guide please go to the ‘Read Me’ page.
+      Welcome to our virtual exhibition! We hope you enjoy the ride. For a step-by-step guide please visit the
+      <a href="read_me.html">Read Me</a> page.
       <br /><br />
-      We are DMSP Preservation team 2020, studying a Digital Media Studio Project module at the Edinburgh College of
+      We are the Preservation Team from the 2020 Digital Media Studio Project (DMSP) module at Edinburgh College of
       Art.
-      We came together from a variety of visual, sonic, and digital design backgrounds to explore the theme of
-      ‘Preservation’
-      in the digital age. From the outset we were fascinated by the process of memory and the role of dreaming in the
+      We came together from a variety of technical and creative backgrounds to explore the theme of
+      ‘Preservation’ in the digital age.
+      From the outset we were fascinated by the process of memory and the role of dreaming in the
       formation of memory, and how much our memories are seemingly and endlessly recorded on social media platforms.
-      We developed the character, IAIN, who is the interface of an hypothetical archive in the future and who features
-      in the opening animation for the website. His role as the interface is not simply to record memories in a
-      straight forward way but he generates unique audio-visual pieces for each user depending on their memory-text.
+      We developed the character, IAIN, who is the interface of a hypothetical archive in the future and who features
+      in the opening animation for the website. His role as the interface is to preserve your memory
+      and a generate a unique audio-visual experience depending on your input memory and category.
 
     </p>
   </div>
-  <div class="sound-team">
-    <p>About Feedback Questuinnaire</p>
-  </div>
-  <div>
-    <p class="member-content">If you are interested in our website and would like to give us some feedback, let us know
-      the direction of future progress, we will be very grateful！
-      <br /><br />
-      🌟Here is the URL of Questionnaire: <a target="_blank" style="color: pink;"
-        href="https://s1821826.typeform.com/to/OSFqSR">
-        https://s1821826.typeform.com/to/OSFqSR</a>
-    </p>
-  </div>
+
 
   <div class="member-photo">
-    <p class="sound-team">Preservation Team</p>
+    <p class="sound-team">DMSP Preservation Team 2020</p>
 
     <figure class="c4-izmir c4-image-zoom-in c4-border-top-left c4-gradient-top-left">
       <img class="Ali" src="../img/photo/Ali.png" alt="Ali" />
@@ -140,6 +130,19 @@
         <h1>Sound visualisation with p5 and help to build the front-end.</h1>
       </figcaption>
     </figure>
+</div>
+    <div class="sound-team">
+      <p>Please give us your feedback!</p>
+    </div>
+    <div>
+      <p class="member-content">If you are interested in our website and would like to give us some feedback,
+        we would be very grateful and this will help us consider the future direction of this project.
+        <br /><br />
+        🌟Here is the URL of Questionnaire: <a target="_blank" style="color: pink;"
+          href="https://s1821826.typeform.com/to/OSFqSR">
+          https://s1821826.typeform.com/to/OSFqSR</a>
+      </p>
+    </div>
 
     <br>
     <br>
@@ -208,7 +211,7 @@
                   <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                     stroke="#ffffff90" />
                 </svg>
-                <div class="button-text-light">Feedback Questionnaire</div>
+                <div class="button-text-light">Give Feedback</div>
               <a>
           </li>
       </ul>
