--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -190,7 +190,7 @@
                   <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
                     stroke="#ffffff90" />
                 </svg>
-                <div class="button-text-light">Feedback Questionnaire</div>
+                <div class="button-text-light">Give Feedback</div>
               <a>
           </li>
       </ul>
