--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -104,11 +104,13 @@
       <img class="step3-img" src="../img/bg/step.png" style="width:19vw;" />
       <p class="number3">3</p>
       <img class="step3-archive" src="../img/bg/archive.png" style="width:30vw;" />
-      <p class="step3-text1">Once I have processed it, you will then be able to choose
-        whether you want me to preserve your memory or delete it.
-        If you choose to save it, it will be added to my memory archive.
-        You can then access your unique memory and explore other people’s
-        memories in the archive any time.</p>
+      <p class="step3-text1" style ="z-index:1">
+        Once I have processed it, you will then have the option to preserve your memory
+         in the <a style="color:pink;" href="memory_lisp.php">Memory Archive<a>, where it will be visible to other users.
+           <br>
+           Your data (name and memory) will be stored in a JSON file on the ECA server until the website is taken down (up to 6 months).
+           You can read our full privacy statement <a style="color:pink;" href="privacy-statement.html">here<a>.
+        </p>
     </div>
 
     <div class="step4">
@@ -116,11 +118,18 @@
       <img class="step4-img" src="../img/bg/step.png" style="width:19vw;" />
       <p class="number4">4</p>
       <img class="step4-archive" src="../img/bg/your-memory.png" style="width:44vw;" />
-      <p class="step4-text1">Your name and text written will be stored using json in the code for the website.
-        It is not stored anywhere else, e.g. external hard-drive. Whilst on the website both name and memory input text
-        are visible to other users.
-        It will be deleted once the website is no longer live (maximum 6 months).
-        You can read our full privacy statement <a style="color:pink;" href="privacy-statement.html">here<a>.
+      <p class="step4-text1">
+        I now invite you to:
+        <br>
+        <br>
+        Explore the <a style="color:pink;" href="memory_lisp.php">Memory Archive<a>
+          <br>
+          <br>
+          or
+          <br>
+          <br>
+          Add your own memory <a style="color:pink;" href="record_memory.html">here<a>!
+        </thead>
       </p>
     </div>
 
