--- a/ui/index.html
+++ b/ui/index.html
@@ -51,7 +51,7 @@
   </div>
   <div class="hint">
     <p>This website works best on
-      <a href="https://www.google.com/chrome/"><span>Chrome</span></a> (PC).
+      <a href="https://www.google.com/chrome/"><span>Chrome</span></a> (desktop).
     </p>
   </div>
 
