update read me, privacy and feedback

--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -139,8 +139,8 @@
         we would be very grateful and this will help us consider the future direction of this project.
         <br /><br />
         🌟Here is the URL of Questionnaire: <a target="_blank" style="color: pink;"
-          href="https://s1821826.typeform.com/to/OSFqSR">
-          https://s1821826.typeform.com/to/OSFqSR</a>
+          href="feedback.html">
+          https://playground.eca.ed.ac.uk/~s1409071/docs/ui/feedback.html</a>
       </p>
     </div>
 
@@ -205,7 +205,7 @@
               </a>
           </li>
 
-          <li><a target="_blank" href="https://s1821826.typeform.com/to/OSFqSR">
+          <li><a target="_blank" href="feedback.html">
               <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
                 <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
                   <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
