--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -44,20 +44,13 @@
       <p class="introduction-content">Welcome to the memory booth, my name is IAIN, <br>
         I am an archive of memory. I can preserve and transform <br>
         your memories in a unique interactive way.<br><br>
-        Exploring the digital archive, you may feel you become lost in this immersive world,
-        populated with other people’s memories. But to become part of the archive and
-        part of this mental architecture your memories first need to be translated from human
-        language into code (AI language). This process generates sound and a unique moving
-        graphic. The result is disjointed, dreamlike, and unfamiliar to us. Dreams are part of how
-        we remember as humans. Imagine if, with the advent of AI, machines will not only be able
-        to think for themselves but to have a subconscious and dream as they process, learn
-        from, and remember the human world around them, you will begin to enter our world.
-
-
-
-
-
-
+        Exploring the digital archive, you may feel you become lost in my world, populated with other human memories.
+        But to become part of the archive and part of my mental architecture your memories first need to be translated
+        from human language into code (my language). This process generates sound and a unique moving graphic.
+        The result might be disjointed, dreamlike, and unfamiliar to you. Dreams are part of how you remember as humans.
+        Imagine if, with the advent of AI, we machines will not only be able to think for ourselves but to have a
+        subconscious and dream as we process, learn from, and remember the human world around us, you will begin to
+        enter my world.
       </p>
     </div>
     <div class="booth">
@@ -106,7 +99,7 @@
       <img class="step3-archive" src="../img/bg/archive.png" style="width:30vw;" />
       <p class="step3-text1" style ="z-index:1">
         Once I have processed it, you will then have the option to preserve your memory
-         in the <a style="color:pink;" href="memory_lisp.php">Memory Archive<a>, where it will be visible to other users.
+         in the <a style="color:pink;" href="memory_list.php">Memory Archive<a>, where it will be visible to other users.
            <br>
            Your data (name and memory) will be stored in a JSON file on the ECA server until the website is taken down (up to 6 months).
            You can read our full privacy statement <a style="color:pink;" href="privacy-statement.html">here<a>.
@@ -122,7 +115,7 @@
         I now invite you to:
         <br>
         <br>
-        Explore the <a style="color:pink;" href="memory_lisp.php">Memory Archive<a>
+        Explore the <a style="color:pink;" href="memory_list.php">Memory Archive<a>
           <br>
           <br>
           or
@@ -193,7 +186,7 @@
               </a>
           </li>
 
-          <li><a target="_blank" href="https://s1821826.typeform.com/to/OSFqSR">
+          <li><a target="_blank" href="feedback.html">
               <div class="svg-wrapper-light" style="width:350px; margin: 50px 0;">
                 <svg style=" height:60px; width: 350px;" xmlns="http://www.w3.org/2000/svg">
                   <rect class="shape-light" style="height:60px; width:350px;stroke-dasharray: 380 20 390 20;"
