--- a/ui/choice.html
+++ b/ui/choice.html
@@ -40,7 +40,7 @@
 	</div>-->
 
 	<div id="back-page-button" class="backicon-fixed">
-		<a href="memory_list.php">
+		<a href="your_memory.php">
 			<svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
 				p-id="1479" width="48" height="48">
 				<path
