--- a/ui/choice.html
+++ b/ui/choice.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html>
 
 <head>
@@ -64,19 +64,19 @@
 						<div class="svg-wrapper-light cyan choice-button-wide" style=" border: solid 5px var(--ccyan)"
 							onclick="window.location.href = 'animation.html'">
 							<span>
-								<div class="button-text-light" style="top:2px; color:white" id="save">
+								<div class="button-text-light" style="font-size:1.5em;top:-1px; color:white" id="save">
 									Save</div>
 							</span>
 
 
-							<!-- <span class="tooltiptext">By saving you are agreeing for your name and memory to be saved to the database and be visible to other users.</span> -->
+
 							<div class="hover-text">By saving you are agreeing for your name and memory to be <br>saved
 								to the database and be visible to other users</div>
 
 						</div>
 					</a>
 					<a href="delete.html" style="text-decoration: none;">
-						<div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
+						<div class="svg-wrapper-light choice-button-wide" style="font-size:1.5em;top:-1px; border: solid 5px var(--cpurple);">
 							<div class="button-text-light" style="top:2px; color:var(--main-color)" id="dont-save">
 								Don't Save</div>
 						</div>
