--- a/ui/about_us.html
+++ b/ui/about_us.html
@@ -41,19 +41,12 @@
 
   <div>
     <p class="member-content">
-      Welcome to our virtual exhibition! We hope you enjoy the ride. For a step-by-step guide please visit the
-      <a href="read_me.html">Read Me</a> page.
-      <br /><br />
-      We are the Preservation Team from the 2020 Digital Media Studio Project (DMSP) module at Edinburgh College of
-      Art.
-      We came together from a variety of technical and creative backgrounds to explore the theme of
-      ‘Preservation’ in the digital age.
-      From the outset we were fascinated by the process of memory and the role of dreaming in the
-      formation of memory, and how much our memories are seemingly and endlessly recorded on social media platforms.
-      We developed the character, IAIN, who is the interface of a hypothetical archive in the future and who features
-      in the opening animation for the website. His role as the interface is to preserve your memory
-      and a generate a unique audio-visual experience depending on your input memory and category.
-
+      We are the Preservation Team from the 2020 Digital Media Studio Project (DMSP) module at Edinburgh College of Art.
+      We came together from a variety of technical and creative backgrounds to explore the concept of ‘Preservation’ in the digital age.
+      Early on we were fascinated by the relationship between the preservation of memory and dreaming and focused on things
+      like AI dreaming and the surreal. Later on we spent some time thinking about digital platforms. With social media
+      and the ‘endless scroll’ it seems we have a clear, uninterrupted view into our own past. However, behind the scenes
+      these deeply personal mementos are being transformed into code, big data, and non-human forms.
     </p>
   </div>
 
