--- a/ui/privacy-statement.html
+++ b/ui/privacy-statement.html
@@ -41,7 +41,7 @@
 
   <div>
     <p class="member-content">
-      🌟What information you collect and why
+      🌟What information we collect and why
       <br /><br />
       We are collecting names – not full names and false names can be given – and a brief summary of a memory
       they have had by filling in the text box, and the category of the memory. This is for the purposes of
@@ -53,10 +53,10 @@
       some information for the purposes of evaluating the website, but this will contain no personal data and so
       be anonymised and asks questions around user experience of the website.
       <br /><br />
-      🌟How the information you collect is used
+      🌟How the information we collect is used
       <br /><br />
-      The names and text will be stored on the website via json code. It will not be stored anywhere else. As above
-      the information, e.g. a sample memory text, could be anonymised and used as part of final coursework submission
+      The names and text will be stored in a <a style="color:pink;" target = "_blank" href = "https://playground.eca.ed.ac.uk/~s1409071/json/memories.json">JSON file</a> on the Edinburgh College of Art Playground server. It will not be stored anywhere else.
+      As above the information, e.g. a sample memory text, could be anonymised and used as part of final coursework submission
       however this will remain confidential and within wider University of Edinburgh confidentiality and data
       guidelines.
       This coursework will not be publicly available and all data will be deleted following 6 months of the website
@@ -75,16 +75,14 @@
       this
       will be within a maximum period of 6 months from the website going live. You can request to have this data removed
       sooner by emailing agnese.sile@ed.ac.uk. If you have any questions about how your data will be used please email
-      and
-      you can withdraw consent and have data removed any time.
+      and you can withdraw consent and have data removed any time.
       <br /><br />
       🌟If you choose to delete your memory
       <br /><br />
       Your name and the text for your memory will not be stored anywhere on this website or on any other devices and
       will
       not be visible to other users. Please contact agnese.sile@ed.ac.uk for further information on your data and how it
-      is
-      used on this website.
+      is used on this website.
       <br /><br /><br />
     </p>
   </div>
