--- a/ui/read_me.html
+++ b/ui/read_me.html
@@ -39,7 +39,7 @@
                 <img src="../img/gif/Preservation-Hallucination.gif" style="width:50%" />
                 <p>
                     Welcome to the memory booth, my name is IAIN, <br /><br />
-                    I am an archive of memory. I can preserve and transformyour memories in a unique interactive
+                    I am an archive of memory. I can preserve and transform your memories in a unique interactive
                     way.<br /><br />
                     Exploring the digital archive, you may feel you become lost in my world, populated with other human
                     memories. But to become part of the archive and part of my mental architecture your memories first
@@ -52,6 +52,9 @@
                     think
                     for ourselves but to have a subconscious and dream as we process, learn from, and remember the human
                     world around us, you will begin to enter my world.
+                    <br>
+                    <br>
+                    Scroll to find out more...
                 </p>
             </div>
         </div>
@@ -62,16 +65,15 @@
             <div class="pure-g">
                 <div class="pure-u-1-2"> </div>
                 <div class="pure-u-1-2">
-                    <p class="blue-text">Here's how it works...</p>
+                    <p class="blue-text">Here's how it works. Follow these steps...</p>
                 </div>
             </div>
 
 
             <div class="pure-g">
                 <div class="pure-u-1-2">
-                    <p id="step1"> Firstly, you enter your name, memory and the
-                        category of
-                        memory...</p>
+                    <p id="step1"> Firstly, you will be asked to provide a name (e.g Bob), choose a category (e.g childhood),
+                      and write down your memory...  </p>
                 </div>
                 <div class="pure-u-1-2"> </div>
             </div>
@@ -81,7 +83,7 @@
                 <div class="pure-u-1-2">
                     <div class="onscale-roll" id="step2">
                         <p>
-                            Then I will prepare it for perservation...
+                            Then I will prepare it for preservation...
                             <br /><br /><b>#1 Text -> Code</b>
                             <br />I interpret your memory as a string of ASCII characters, each of which has a
                             corresponding
@@ -127,11 +129,11 @@
                 <div class="pure-u-1-2">
                     <p id="step4">
                         I now invite you to:
-                        <br />Explore the
-                        <a style="color:pink;" href="memory_list.php">Memory Archive</a>
+                        <br />Explore the memory archive
+                        <a style="color:pink;" href="memory_list.php">here</a>
                         <br />or
                         <br />Add your own memory
-                        <a style="color:pink;" href="record_memory.html">here</a>!
+                        <a style="color:pink;" href="record_memory.html">here</a>
                     </p>
                 </div>
                 <div class="pure-u-1">
