--- a/ui/choice.html
+++ b/ui/choice.html
@@ -56,15 +56,15 @@
 		</a>
 
 		<div class="row align-items-center justify-content-center choice-container">
-			<div class="col-md-12 my-auto" style="text-align: center; ">
-				<h1>Save your memory?</h1>
+			<div class="col-md-12 my-auto" style="text-align: center;">
+				<h1 style="text-align: center; margin-top: 70px;">Save your memory?</h1>
 
-				<div class="button-container">
+				<div class="button-container" style= "z-index: 1; margin-top: 10px">
 					<a href="save.php" style="text-decoration: none;">
-						<div class="svg-wrapper-light cyan choice-button-wide" style=" border: solid 5px var(--ccyan)"
+						<div class="svg-wrapper-light cyan choice-button-wide" style=" border: solid 5px var(--ccyan);"
 							onclick="window.location.href = 'animation.html'">
 							<span>
-								<div class="button-text-light" style="top:2px; color:white" id="save">
+								<div class="button-text-light" style="top:2px; color:white;" id="save">
 									Save</div>
 							</span>
 
@@ -84,7 +84,7 @@
 				</div>
 
 			</div>
-			<div class="col-md-12 my-auto" style="text-align: center;" id="gif-container">
+			<div class="gif-container" style="text-align: center; margin: -70px 0px" id="gif-container">
 			</div>
 		</div>
 	</div>
