--- a/ui/introduction.html
+++ b/ui/introduction.html
@@ -38,13 +38,25 @@
             Your browser does not support HTML5 video :( try using Chrome!
         </video>
     </div> -->
+
+    <div id="back-page-button" class="backicon-fixed" style="margin: -2px -2px;">
+  		<a href="index.html">
+  			<svg t="1588027382315" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg"
+  				p-id="1479" width="48" height="48">
+  				<path
+  					d="M960.243 456.737v110.526h-682.875l312.547 315.789-78.793 78.948-449.121-450 449.122-450 81.419 78.948-315.173 315.789h682.875z"
+  					p-id="1480" fill="var(--ccyan)"></path>
+  			</svg>
+  		</a>
+  	</div>
+
     <div class="center" style="width:80vw">
         <video controls autoplay width="400" id="myVideo">
             <source src="../img/video/introduction.webm" type="video/webm">
             Your browser does not support HTML5 video.
         </video>
         <div class="btn-right">
-            <a href="memory_list.php">
+            <a href="read_me.html">
                 <div id="skipBtn" class="btn-control">
                     <span>Skip</span>
                     <svg id="svg-skip" t="1588198092968" class="icon" viewBox="0 0 1024 1024" version="1.1"
@@ -59,8 +71,8 @@
         </div>
         <div class="btn-center">
             <div class="svg-wrapper-light purple" id="btn-enter-archive" style="visibility: hidden;">
-                <a href="memory_list.php">
-                    <div class="button-text-light" style="top:5px; color:white">Enter Archive</div>
+                <a href="read_me.html">
+                    <div class="button-text-light" style="top:5px; color:white">Continue</div>
                 </a>
             </div>
         </div>
