--- a/ui/delete.html
+++ b/ui/delete.html
@@ -50,28 +50,16 @@
 
 
     <div>
-      <h1 id="text" class="center" style="font-size: 2em;top:21vw; z-index: 2;">Memory deleted</h1>
+      <h1 id="text" class="center" style="font-size: 2em;top:17vw; z-index: 2;">Memory deleted</h1>
     </div>
 
-    <div class="gif-container center" style="margin: 30px 0;">
-      <img id="gif" src='' style="width: 400px;" />
+    <div class="gif-container center">
+      <img id="gif" src='' style="width: 400px; margin-top: 4vw" />
     </div>
 
 
 
-    <div class="button-container" id="button-container" style="padding-top:24vw;">
-
-      <!-- <button id="delete-button" onclick="window.location.href = 'choice.html'"
-        class="svg-wrapper-light cyan choice-button-wide" style="border: solid 5px var(--ccyan);">
-        <div class="button-text-light" style="top:0px; color:white">
-          Back</div>
-      </button>
-
-      <button id="back-button" onclick="deleteMem()" class="svg-wrapper-light choice-button-wide"
-        style="border: solid 5px var(--cpurple);">
-        <div class="button-text-light" style="top:0px; color:white">
-          Delete</div>
-      </button> -->
+    <div class="button-container" id="button-container" style="padding-top:18vw;">
 
       <a id="home-link" href="memory_list.php">
         <div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
