Revert "Add files via upload"
This reverts commit dab06e59531193635a38da935f9e2e1739813b3b.

--- a/ui/delete.html
+++ b/ui/delete.html
@@ -3,18 +3,18 @@
 
 <head>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T40QBMYD00"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-T40QBMYD00');
-</script>
+    gtag('config', 'G-T40QBMYD00');
+  </script>
 
   <meta charset="UTF-8">
   <title>Delete</title>
-  <link rel="icon" href="../img/tab-icon.png">
+  <link rel="icon" href="../img/bg/tab-icon.png">
 </head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -50,21 +50,20 @@
 
 
     <div>
-      <h1 id="text-delete" class="center" style="font-size: 2em;top:37%; z-index: 2;">Memory deleted</h1>
+      <h1 id="text" class="center" style="font-size: 2em;top:17vw; z-index: 2;">Memory deleted</h1>
     </div>
 
-    <div class="gif-container center" style="margin: 30px 0;">
-      <img id="gif" src='' style="width: 400px;" />
+    <div class="gif-container center">
+      <img id="gif" src='' style="width: 400px; margin-top: 4vw" />
     </div>
 
 
 
-    <div class="button-container" id="button-container" style="padding-top:24vw;">
-
+    <div class="button-container" id="button-container" style="padding-top:18vw;">
 
       <a id="home-link" href="memory_list.php">
-        <div class="svg-wrapper-light choice-button-wide" style="font-size:1.5em; top:-1px; border: solid 5px var(--cpurple);">
-          <div class="button-text-light" style="top:2px; color:white">
+        <div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
+          <div class="button-text-light" style="top:5px; color:white">
             Home</div>
         </div>
         <a>
