--- a/ui/delete.html
+++ b/ui/delete.html
@@ -59,12 +59,12 @@
 
 
 
-    <div class="button-container" id="button-container" style="padding-top:24vw;">
+    <div class="button-container" id="button-container" style="padding-top:20vw;">
 
 
       <a id="home-link" href="memory_list.php">
-        <div class="svg-wrapper-light choice-button-wide" style="font-size:1.5em; top:-1px; border: solid 5px var(--cpurple);">
-          <div class="button-text-light" style="top:2px; color:white">
+        <div class="svg-wrapper-light choice-button-wide" style="font-size:1.5em; top:0px; border: solid 5px var(--cpurple);">
+          <div class="button-text-light" style="font-size:1.25em; top:-1px; color:white;">
             Home</div>
         </div>
         <a>
