change the color and font of hover text

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -70,13 +70,16 @@
 
 
 
-							<div class="hover-text">By saving you are agreeing for your name and memory to be <br>saved
+							<div class="hover-text" style="font-family: 'Orbitron', sans-serif;color: var(--cgreen);">By
+								saving you are
+								agreeing for your name and memory to be <br>saved
 								to the database and be visible to other users</div>
 
 						</div>
 					</a>
 					<a href="delete.html" style="text-decoration: none;">
-						<div class="svg-wrapper-light choice-button-wide" style="font-size:1.5em;top:-1px; border: solid 5px var(--cpurple);">
+						<div class="svg-wrapper-light choice-button-wide"
+							style="font-size:1.5em;top:-1px; border: solid 5px var(--cpurple);">
 							<div class="button-text-light" style="top:2px; color:var(--main-color)" id="dont-save">
 								Don't Save</div>
 						</div>
