remove the strange line when hovering button

--- a/ui/delete.html
+++ b/ui/delete.html
@@ -73,7 +73,7 @@
           Delete</div>
       </button> -->
 
-      <a id="home-link" href="memory_list.php">
+      <a id="home-link" href="memory_list.php" style="text-decoration: none;">
         <div class="svg-wrapper-light choice-button-wide" style="border: solid 5px var(--cpurple);">
           <div class="button-text-light" style="top:5px; color:white">
             Home</div>
