changed font size and gif position

--- a/ui/choice.html
+++ b/ui/choice.html
@@ -79,7 +79,7 @@
 					</a>
 					<a href="delete.html" style="text-decoration: none;">
 						<div class="svg-wrapper-light choice-button-wide"
-							style="font-size:1.5em;top:-1px; border: solid 5px var(--cpurple);">
+							style="border: solid 5px var(--cpurple);">
 							<div class="button-text-light" style="top:2px; color:var(--main-color)" id="dont-save">
 								Don't Save</div>
 						</div>
@@ -87,7 +87,7 @@
 				</div>
 
 			</div>
-			<div class="gif-container" style="text-align: center; margin: -70px 0px" id="gif-container">
+			<div class="gif-container" style="text-align: center; margin: -50px 0px" id="gif-container">
 			</div>
 		</div>
 	</div>
